examples/negative/modules/duplicate_axiom_decl.kai
# Negative fixture (#543 / modules): two `axiom` declarations with
# the same name `unsafe_cast` appear in the same module. The
# resolver rejects with "already declared", matching the duplicate
# `type`, `fn`, `effect`, and `const` cases. `register_one`
# previously prepended the second axiom into the env blindly so it
# silently shadowed the first (lower_axioms then rewrote both to
# DFn, but the shadowing had already taken effect at resolve time).

axiom unsafe_cast[A, B](x: A) : B
axiom unsafe_cast[A, B](x: A) : B

fn main() : Int = 0
